sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:10: error: value || is not a member of Int
      if (ecart=9 || ecart=10){
                  ^AlgCombSort11:10: error: type mismatch;
 found   : Unit
 required: Boolean
      if (ecart=9 || ecart=10){
               ^